--- a/style.css
+++ b/style.css
@@ -50,8 +50,73 @@ img {
     .header {
         height: 60px;
     }
-    
+
     .header-logo {
         height: 30px;
+    }
+}
+
+/* hero */
+.hero {
+    display: flex;
+    justify-content: center;
+    background-image: url(./img/hero.png);
+    background-size: cover;
+    padding: 96px 40px;
+    position: relative;
+}
+
+.hero::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-hero-overlay);
+
+}
+
+.hero-container {
+    width: 100%;
+    max-width: 1000px;
+    display: flex;
+    justify-content: flex-end;
+    z-index: 1;
+}
+
+.hero-text {
+    color: var(--color-accent-yellow);
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 400px;
+}
+
+.hero-main-copy {
+    margin: 0;
+    font-size: 64px;
+    line-height: 1;
+    font-family: var(--font-family-heading);
+    letter-spacing: 0.05rem;
+}
+
+.hero-main-copy-accent {
+    color: var(--color-accent-red);
+}
+
+.hero-sub-copy {
+    margin: 0;
+}
+
+@media (max-width: 750px) {
+    .hero {
+        padding: 40px 20px;
+    }
+    .hero-container {
+        justify-content: flex-start;
+    }
+    .hero-text {
+        gap: 20px;
     }
 }
