--- a/style.css
+++ b/style.css
@@ -39,6 +39,11 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 300;
+    width: 100%;
 }
 .header-logo-wrapper {
     margin: 0;
@@ -64,6 +69,7 @@ img {
     background-size: cover;
     padding: 96px 40px;
     position: relative;
+    margin-top: 80px;
 }
 
 .hero::after {
@@ -112,6 +118,7 @@ img {
 @media (max-width: 750px) {
     .hero {
         padding: 40px 20px;
+        margin-top: 60px;
     }
     .hero-container {
         justify-content: flex-start;
