--- a/style.css
+++ b/style.css
@@ -127,3 +127,273 @@ img {
     gap: 20px;
   }
 }
+
+/* about */
+.about {
+  background-color: var(--color-background-black);
+  display: flex;
+  justify-content: center;
+}
+
+.about-container {
+  max-width: 880px;
+  padding: 80px 40px;
+}
+
+.about-main-copy {
+  font-family: var(--font-family-heading);
+  font-size: 32px;
+  letter-spacing: 0.02em;
+  color: var(--color-white);
+  margin: 0;
+  padding-bottom: 1em;
+  text-align: center;
+}
+
+.about-main-copy-accent-red {
+  color: var(--color-accent-red);
+}
+
+.about-main-copy-accent-yellow {
+  color: var(--color-accent-yellow);
+}
+
+.about-content {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  column-gap: 20px;
+}
+
+.about-text {
+  font-family: var(--font-family-body);
+  color: var(--color-white);
+  font-size: 16px;
+  font-weight: 400;
+  margin: 0;
+}
+
+.about-image-box {
+  width: 320px;
+  height: 180px;
+}
+
+.about-image {
+  width: 320px;
+  height: 180px;
+  object-fit: cover;
+  padding: 0;
+  margin: 0;
+}
+
+@media (max-width: 750px) {
+  .about-container {
+    padding: 40px 20px;
+  }
+  .about-image-box {
+    display: none;
+  }
+  .about-main-copy {
+    font-size: 24px;
+    letter-spacing: normal;
+    padding-bottom: 40px;
+  }
+  .about-content {
+    gap: 0;
+  }
+  .about-text > br {
+    display: none;
+  }
+}
+
+/* courses */
+.courses {
+  background-color: var(--color-background-navy);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 80px 0;
+}
+
+.courses-container {
+  max-width: 880px;
+  padding: 0 40px;
+}
+
+.courses-main-copy {
+  font-family: var(--font-family-heading);
+  font-size: 32px;
+  letter-spacing: 0.02em;
+  color: var(--color-white);
+  margin: 0;
+  text-align: center;
+  margin-bottom: 40px;
+  font-weight: 400;
+}
+
+.courses-card {
+  display: flex;
+  margin-bottom: 20px;
+  filter: drop-shadow(4px 4px 0 var(--color-accent-red));
+  height: 150px;
+  background-color: var(--color-accent-yellow);
+}
+
+.courses-card:hover {
+  filter: drop-shadow(10px 10px 0 var(--color-accent-red));
+  transition: 0.3s;
+  background-color: var(--color-course-hover-yellow);
+}
+
+.courses-card-left {
+  position: relative;
+}
+
+.courses-card-image-box {
+  height: 150px;
+  width: 250px;
+}
+
+.courses-card-image-box::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-course-overlay);
+  z-index: 3;
+}
+
+.courses-card-image-box::after {
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  color: var(--color-white);
+  z-index: 2;
+  font-size: 32px;
+  letter-spacing: 0.05em;
+  font-family: var(--font-family-heading);
+}
+
+.Frontman::after {
+  content: "Frontman";
+  z-index: 4;
+}
+
+.Backing::after {
+  content: "Backing";
+  z-index: 4;
+}
+
+.Lead::after {
+  content: "Lead";
+  z-index: 4;
+}
+
+.Solo::after {
+  content: "Solo";
+  z-index: 4;
+}
+
+.courses-card-right {
+  padding: 20px;
+  font-family: var(--font-family-body);
+  font-weight: 400;
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.courses-card-text-right-top {
+  margin: 0;
+}
+
+.courses-card-text-right-bottom {
+  display: flex;
+  justify-content: flex-end;
+  margin: 0;
+  color: var(--color-accent-red);
+}
+
+.view-more {
+  margin-bottom: -10px;
+}
+
+.courses-card-image {
+  width: 250px;
+  height: 150px;
+  object-fit: cover;
+  padding: 0;
+  margin: 0;
+}
+
+.courses-button {
+  background-color: var(--color-accent-red);
+  width: 100%;
+  padding: 10px 40px;
+  height: 60px;
+  display: flex;
+  margin-top: 40px;
+  align-items: center;
+  filter: drop-shadow(4px 4px 0 var(--color-accent-yellow));
+}
+
+.courses-button:hover {
+  background: var(--color-button-hover-red);
+  filter: drop-shadow(10px 10px 0 var(--color-accent-yellow));
+  transition: 0.3s;
+}
+
+.courses-button-text {
+  font-family: var(--font-family-body);
+  font-weight: 400;
+  font-size: 20px;
+  color: var(--color-white);
+  text-align: center;
+  max-width: 760px;
+  width: 100%;
+}
+.courses-button-image-box {
+  width: 40px;
+  height: 40px;
+  display: flex;
+}
+
+@media (max-width: 750px) {
+  .courses {
+    padding-top: 0;
+    padding-bottom: 40px;
+  }
+  .courses-container {
+    padding: 0px 20px;
+  }
+  .courses-card {
+    display: block;
+    height: auto;
+  }
+
+  .courses-card-image-box {
+    width: 100%;
+    height: auto;
+  }
+
+  .courses-card-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .courses-card-right {
+    font-size: 12px;
+  }
+  .courses-button-text {
+    font-size: 14px;
+  }
+  .courses-button-image-box {
+    width: 30px;
+    height: 30px;
+  }
+}
